--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div class="container-fluid">
-                <h3 class="text-dark mb-4" style="width: 850px;border-color: var(--bs-purple);" id="fromtotext">from to&nbsp;</h3>
+                <h3 class="text-dark mb-4" style="width: 850px;border-color: var(--bs-purple);" id="fromtotext"></h3>
                 <div class="card shadow">
                     <div class="card-header py-3">
                         <p class="text-primary m-0 fw-bold" style="width: 150px;height: 40px;font-size: 28px;">Bus Details</p>
@@ -102,7 +102,7 @@
                                                 <th class="text-start" style="width: 109.4px;">ixigo&nbsp;<span class="text-start"><i class="fas fa-bus-alt" style="font-size: 27px;"></i></span></th>
                                                 <th class="text-start" style="width: 109.4px;">easemytrip<span class="text-start"><i class="fas fa-bus-alt" style="font-size: 27px;"></i></span></th>
                                                 <th style="width: 143.4px;">start of journey</th>
-                                                <th style="width: 143.4px;">Board Points</th>
+                                                <th style="width: 143.4px;">end of journey</th>
                                             </tr>
                                         </thead>
                                         <tbody id="tablebody">
@@ -111,7 +111,7 @@
                                 </div>
                             </div>
                             <div class="col-md-6 align-self-center">
-                                <p id="dataTable_info" class="dataTables_info" role="status" aria-live="polite">Found 100 buses</p>
+                                <p id="dataTable_info" class="dataTables_info" role="status" aria-live="polite"></p>
                             </div>
                         </div>
                     </div>
@@ -143,85 +143,3 @@
 </body>
 
 </html>
-
-<!-- '[{"name":"Tranz king travels","startTime":"2022-11-10 23:00:00","endtime":"2022-11-11
-05:00:00","boardpoint":"Kumbakonam","depaturepoint":"Koyambedu","Bpcount":2,"btype":"A/C Sleeper
-(2+1)","rbFare":1100,"ixigoFare":"false","startepoch":1668101400,"endepoch":1668123000},{"name":"Rathimeena
-Travels","startTime":"2022-11-10 23:00:00","endtime":"2022-11-11 05:00:00","boardpoint":"Rathimeena Office Nr Old Bus
-Stand","depaturepoint":"Koyambedu","Bpcount":2,"btype":"NON AC Seater / Sleeper
-2+1","rbFare":540,"ixigoFare":"false","startepoch":1668101400,"endepoch":1668123000},{"name":"Rathimeena Travels
-C","startTime":"2022-11-10 22:30:00","endtime":"2022-11-11 04:30:00","boardpoint":"Rathimeena Office Nr Old Bus
-Stand","depaturepoint":"Koyambedu","Bpcount":2,"btype":"NON A/C Seater
-(1+1+1)","rbFare":540,"ixigoFare":"false","startepoch":1668099600,"endepoch":1668121200},{"name":"YBM
-Travels","startTime":"2022-11-10 23:30:00","endtime":"2022-11-11
-05:30:00","boardpoint":"Kumbakonam.","depaturepoint":"Koyambedu","Bpcount":2,"btype":"A/C Sleeper
-(2+1)","rbFare":790,"ixigoFare":"false","startepoch":1668103200,"endepoch":1668124800},{"name":"Rathimeena Travels
-A","startTime":"2022-11-10 23:30:00","endtime":"2022-11-11 05:30:00","boardpoint":"Rathimeena Office Nr Old Bus
-Stand","depaturepoint":"Koyambedu","Bpcount":2,"btype":"Capella A/C Sleeper
-(2+1)","rbFare":667,"ixigoFare":"false","startepoch":1668103200,"endepoch":1668124800},{"name":"Tranz king
-travels","startTime":"2022-11-10 13:00:00","endtime":"2022-11-10
-19:15:00","boardpoint":"Kumbakonam","depaturepoint":"Koyambedu","Bpcount":1,"btype":"A/C Sleeper
-(2+1)","rbFare":850,"ixigoFare":"false","startepoch":1668065400,"endepoch":1668087900},{"name":"Rathimeena Travels
-A","startTime":"2022-11-10 23:50:00","endtime":"2022-11-11
-05:30:00","boardpoint":"Kumbakonam","depaturepoint":"Koyambedu","Bpcount":2,"btype":"NON AC Seater / Sleeper
-2+1","rbFare":540,"ixigoFare":"false","startepoch":1668104400,"endepoch":1668124800},{"name":"Shri Bhagiyalakshimi
-Travels","startTime":"2022-11-10 23:50:00","endtime":"2022-11-11
-06:10:00","boardpoint":"Kumbakonam","depaturepoint":"Koyambedu","Bpcount":1,"btype":"NON AC Seater / Sleeper
-2+1","rbFare":990,"ixigoFare":"false","startepoch":1668104400,"endepoch":1668127200},{"name":"Shri Bhagiyalakshimi
-Travels","startTime":"2022-11-10 23:55:00","endtime":"2022-11-11
-05:45:00","boardpoint":"Kumbakonam","depaturepoint":"Perungalathur","Bpcount":1,"btype":"NON A/C Seater/ Sleeper
-(2+1)","rbFare":790,"ixigoFare":"false","startepoch":1668104700,"endepoch":1668125700},{"name":"DELTAKING
-TRAVELS","startTime":"2022-11-10 23:50:00","endtime":"2022-11-11 06:35:00","boardpoint":"Near Chennai
-Silks","depaturepoint":"Koyambedu","Bpcount":1,"btype":"NON AC Seater / Sleeper
-2+1","rbFare":547,"ixigoFare":"false","startepoch":1668104400,"endepoch":1668128700},{"name":"DELTAKING
-TRAVELS","startTime":"2022-11-10 23:50:00","endtime":"2022-11-11 06:35:00","boardpoint":"Near Chennai
-Silks","depaturepoint":"Koyambedu","Bpcount":1,"btype":"NON AC Seater / Sleeper
-2+1","rbFare":2000,"ixigoFare":"false","startepoch":1668104400,"endepoch":1668128700},{"name":"AALIA
-TRAVELS","startTime":"2022-11-10 23:45:00","endtime":"2022-11-11
-05:30:00","boardpoint":"Kumbakonam","depaturepoint":"Koyambedu","Bpcount":1,"btype":"NON A/C Seater/ Sleeper
-(2+1)","rbFare":500,"ixigoFare":"false","startepoch":1668104100,"endepoch":1668124800},{"name":"GGR
-TRAVELS","startTime":"2022-11-10 22:45:00","endtime":"2022-11-11
-06:20:00","boardpoint":"Kumbakonam","depaturepoint":"Koyambedu","Bpcount":1,"btype":"A/C Sleeper
-(2+1)","rbFare":850,"ixigoFare":"false","startepoch":1668100500,"endepoch":1668127800},{"name":"Sky
-Bus","startTime":"2022-11-10 23:00:00","endtime":"2022-11-11 04:00:00","boardpoint":"New Bus
-Stand","depaturepoint":"Chengalpattu","Bpcount":1,"btype":"AC Seater
-2+2","rbFare":1049,"ixigoFare":"false","startepoch":1668101400,"endepoch":1668119400},{"name":"Dhanuja
-Travels","startTime":"2022-11-10 23:15:00","endtime":"2022-11-11
-05:00:00","boardpoint":"Kumbakonam","depaturepoint":"Koyambedu","Bpcount":1,"btype":"A/C Sleeper
-(2+1)","rbFare":800,"ixigoFare":"false","startepoch":1668102300,"endepoch":1668123000},{"name":"Shri Bhagiyalakshimi
-Travels","startTime":"2022-11-10 23:59:00","endtime":"2022-11-11
-06:10:00","boardpoint":"Kumbakonam","depaturepoint":"Mannadi","Bpcount":1,"btype":"NON A/C Seater/ Sleeper
-(2+1)","rbFare":790,"ixigoFare":"false","startepoch":1668104940,"endepoch":1668127200},{"name":"Shanmuga
-Travels","startTime":"2022-11-10 22:15:00","endtime":"2022-11-11
-05:45:00","boardpoint":"Kumbakonam","depaturepoint":"Koyambedu","Bpcount":1,"btype":"NON A/C Semi Sleeper
-(2+2)","rbFare":369,"ixigoFare":"false","startepoch":1668098700,"endepoch":1668125700},{"name":"Rathimeena Travels
-A","startTime":"2022-11-10 23:00:00","endtime":"2022-11-11 05:00:00","boardpoint":"Rathimeena Office Nr Old Bus
-Stand","depaturepoint":"Koyambedu","Bpcount":2,"btype":"NON AC Seater / Sleeper
-2+1","rbFare":540,"ixigoFare":"false","startepoch":1668101400,"endepoch":1668123000},{"name":"Orange Tours And
-Travels","startTime":"2022-11-10 23:45:00","endtime":"2022-11-11 05:30:00","boardpoint":"kumbakonam RPG
-TRAVELS","depaturepoint":"Ashok Pillar","Bpcount":2,"btype":"Bharat Benz A/C Sleeper
-(2+1)","rbFare":800,"ixigoFare":"false","startepoch":1668104100,"endepoch":1668124800},{"name":"J.MITHRAN
-TRAVELS","startTime":"2022-11-10 22:30:00","endtime":"2022-11-11
-05:30:00","boardpoint":"Kumbakonam","depaturepoint":"Koyambedu","Bpcount":1,"btype":"NON A/C Semi Sleeper
-(2+2)","rbFare":1500,"ixigoFare":"false","startepoch":1668099600,"endepoch":1668124800},{"name":"J J
-YATRA","startTime":"2022-11-10 22:45:00","endtime":"2022-11-11
-05:20:00","boardpoint":"Kumbakonam","depaturepoint":"Koyambedu Omni Bus Stand","Bpcount":1,"btype":"A/C Sleeper
-(2+1)","rbFare":595,"ixigoFare":"false","startepoch":1668100500,"endepoch":1668124200},{"name":"SK
-Transport","startTime":"2022-11-10 23:50:00","endtime":"2022-11-11 05:45:00","boardpoint":"Sk Jai
-Travels","depaturepoint":"Koyambedu","Bpcount":3,"btype":"NON A/C Sleeper
-(2+1)","rbFare":800,"ixigoFare":"false","startepoch":1668104400,"endepoch":1668125700},{"name":"AALIA
-TRAVELS","startTime":"2022-11-10 23:45:00","endtime":"2022-11-11
-04:00:00","boardpoint":"Kumbakonam","depaturepoint":"Chennai","Bpcount":1,"btype":"NON-AC Seater/Sleeper (2 +
-1)","rbFare":"false","ixigoFare":500,"startepoch":1668104100,"endepoch":1668119400},{"name":"Rathimeena
-Travels","startTime":"2022-11-10 23:00:00","endtime":"2022-11-11
-04:30:00","boardpoint":"Kumbakonam","depaturepoint":"Chennai","Bpcount":2,"btype":"NON-AC Seater/Sleeper (2 +
-1)","rbFare":"false","ixigoFare":540,"startepoch":1668101400,"endepoch":1668121200},{"name":"YBM
-Travels","startTime":"2022-11-10 23:30:00","endtime":"2022-11-11
-04:25:00","boardpoint":"Kumbakonam","depaturepoint":"Chennai","Bpcount":2,"btype":"AC Sleeper (2 +
-1)","rbFare":"false","ixigoFare":790,"startepoch":1668103200,"endepoch":1668120900},{"name":"Orange Tours and
-Travels","startTime":"2022-11-10 23:30:00","endtime":"2022-11-11
-02:00:00","boardpoint":"Kumbakonam","depaturepoint":"Chennai","Bpcount":2,"btype":"AC Sleeper (2 +
-1)","rbFare":"false","ixigoFare":800,"startepoch":1668103200,"endepoch":1668112200},{"name":"GGR
-Travels","startTime":"2022-11-10 22:45:00","endtime":"2022-11-11
-04:45:00","boardpoint":"Kumbakonam","depaturepoint":"Chennai","Bpcount":1,"btype":"AC Sleeper (2 +
-1)","rbFare":"false","ixigoFare":850,"startepoch":1668100500,"endepoch":1668122100}]' -->
