--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,7 @@
             </div>
             <div class="card" style="margin: 2%;">
                 <div class="card-body" style="margin: 2%;">
-                    <h4 class="card-title">Title</h4>
+                    <h4 class="card-title">Charts</h4>
                     <div class="container">
                         <div><canvas id="busDataCanvas">
                         </canvas></div>
